Delete extra folder. Add python API thing.